syntax = "proto3";
package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUser(Empty) returns (UserListResponse);
  rpc CreateUser(CreateUserRequest) returns (GetUserResponse);
}

message Empty {

}

message UserListResponse {
  repeated GetUserResponse users = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserResponse {
  string _id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  string id = 1;
}

